Prevent the home crumb from wrapping.

--- a/wdn/templates_4.0/less/layouts/breadcrumbs.less
+++ b/wdn/templates_4.0/less/layouts/breadcrumbs.less
@@ -22,6 +22,7 @@
                 text-indent: -99em;
                 .rem(12);
                 width: 1.069em;
+                white-space: nowrap;
 
                 &:before {
                     font-family: "fontello";
